[package]
name = "h2"
# When releasing to crates.io:
# - Update doc URL.
#   - html_root_url.
# - Update CHANGELOG.md.
# - Create git tag
version = "0.3.13"
license = "MIT"
authors = [
    "Carl Lerche <me@carllerche.com>",
    "Sean McArthur <sean@seanmonstar.com>",
]
description = "An HTTP/2 client and server"
documentation = "https://docs.rs/h2"
repository = "https://github.com/hyperium/h2"
readme = "README.md"
keywords = ["http", "async", "non-blocking"]
categories = ["asynchronous", "web-programming", "network-programming"]
exclude = ["fixtures/**", "ci/**"]
edition = "2018"

[features]
# Enables `futures::Stream` implementations for various types.
stream = []
bifrost-protocol = []

# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []


[dependencies]
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
tokio-util = { version = "0.7.1", features = ["codec"] }
tokio = { version = "1", features = ["io-util"] }
bytes = "1"
http = "0.2"
tracing = { version = "0.1.21", default-features = false, features = ["std"] }
fnv = "1.0.5"
slab = "0.4.2"
indexmap = { version = "1.5.2", features = ["std"] }

[dev-dependencies]

# Fuzzing
quickcheck = { version = "1.0.3", default-features = false }
rand = "0.8.4"

# HPACK fixtures
hex = "0.4.3"
walkdir = "2.3.2"
serde = "1.0.0"
serde_json = "1.0.0"

# Examples
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
env_logger = { version = "0.9", default-features = false }
tokio-rustls = "0.23.2"
webpki-roots = "0.22.2"

[[example]]
name = "bifrost-server"
path = "examples/bifrost/server.rs"
required-features = ["stream", "bifrost-protocol"]

[[example]]
name = "bifrost-client"
path = "examples/bifrost/client.rs"
required-features = ["stream", "bifrost-protocol"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["stream", "bifrost-protocol"]

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["stream", "bifrost-protocol"]

[package.metadata.docs.rs]
features = ["stream", "bifrost-protocol"]
